index.html updated

--- a/public_html/index.ejs
+++ b/public_html/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,user-scalable=no" />
     <title>
-      Trader_fxm - Your friendly cryptocurrency and foreign exchange marketplace
+      Mora Clothing
     </title>
     <meta
       name="description"
