--- a/public_html/index.ejs
+++ b/public_html/index.ejs
@@ -233,7 +233,6 @@
       <div
         style="
           min-height: 100vh;
-          background-color: black;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -245,7 +244,7 @@
     <script src="/assets/javascript/reactapp-modules.js"></script>
     <script src="/assets/javascript/reactapp.js"></script>
 
-    <script>
+    <!-- <script>
       var Tawk_API = Tawk_API || {},
         Tawk_LoadStart = new Date();
       (function () {
@@ -257,6 +256,6 @@
         s1.setAttribute("crossorigin", "*");
         s0.parentNode.insertBefore(s1, s0);
       })();
-    </script>
+    </script> -->
   </body>
 </html>
